--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
