--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.7.2",
     "frontend": "file:",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
